--- a/G.A.Z.SIOS/Views/Manage/Index.cshtml
+++ b/G.A.Z.SIOS/Views/Manage/Index.cshtml
@@ -28,11 +28,8 @@
             <p class="text-info">
                 Punkty lojalościowe otrzymuje się za wzięcie udziału w wydarzeniu i przesyłaniu opini. Zdobyte punkty lojalnościowe możesz wymienić na nagrody.
             </p>
-            <p>
-                Nie posiadasz żadnych punktów lojalnościowych.
-            </p>
         </dd>
-        <dt>Twoje punkty lojalnościowe:</dt>
+        <dt>Twoje punkty:</dt>
         <dd>
             <p>
                 Nie posiadasz żadnych punktów lojalnościowych.
