--- a/G.A.Z.SIOS/Views/Account/Login.cshtml
+++ b/G.A.Z.SIOS/Views/Account/Login.cshtml
@@ -44,10 +44,10 @@
                 <p>
                     @Html.ActionLink("Zarejestruj się jako nowy użytkownik", "Register")
                 </p>
-                @*Włącz to ustawienie po włączeniu potwierdzenia konta dla funkcji resetowania hasła
+                @*Włącz to ustawienie po włączeniu potwierdzenia konta dla funkcji resetowania hasła*@
                 <p>
                     @Html.ActionLink("Nie pamiętasz hasła?", "ForgotPassword")
-                </p>*@
+                </p>
             }
         </section>
     </div>
