--- a/G.A.Z.SIOS/Views/Shared/_Layout.cshtml
+++ b/G.A.Z.SIOS/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("SIOS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="/Home/Index" > <img src="~/Images/logo.png" alt="Logo SIOS" width="50" height="50" /> </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
+                    <li>@Html.ActionLink("SIOS", "Index", "Home")</li>
                     <li>@Html.ActionLink("O nas", "About", "Home")</li>
                     <li>@Html.ActionLink("Imprezy studenckie", "Imprezy_studenckie", "Home")</li>
                     <li>@Html.ActionLink("Dodaj wydarzenie", "Dodaj_wydarzenie", "Home")</li>
