--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -7,3 +7,9 @@
 
 <h2>Tylko dla zalogowanych uzytkownikow</h2>
 
+<div>
+    <h2>Dodaj wydarzenie</h2><br />
+    Nazwa wydarzenie: <input type="text" /><br />
+    Rodzaj wydarzenia: <input type="text" /><br />
+    Nazwa wydarzenie: <input type="text" /><br />
+</div>
