--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -2,14 +2,14 @@
 @{
     ViewBag.Title = "Dodaj_wydarzenie";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<h2>Tylko dla zalogowanych uzytkownikow</h2>
-
-<div>
-    <h2>Dodaj wydarzenie</h2><br />
-    Nazwa wydarzenie: <input type="text" /><br />
-    Rodzaj wydarzenia: <input type="text" /><br />
-    Nazwa wydarzenie: <input type="text" /><br />
-</div>
+    <div>
+        Nazwa wydarzenie: <input type="text" /><br />
+        Miejsce wydarzenia: <input type="text" /><br />
+        Czas: <input type="text" /><br />
+        Rodzaj wydarzenia:<br />
+        Impreza <input type="radio" /><br />
+        Wojsko <input type="radio" /><br />
+        Targi pracy <input type="radio" /><br />
+        Naukowe <input type="radio" /><br />
+        <input type="submit" value="Dodaj wydarzenie"/><br />
+    </div>
