--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -2,14 +2,15 @@
 @{
     ViewBag.Title = "Dodaj_wydarzenie";
 }
+<h2>Dodawanie wydarzenia</h2><br />
     <div>
         Nazwa wydarzenie: <input type="text" /><br />
         Miejsce wydarzenia: <input type="text" /><br />
         Czas: <input type="text" /><br />
         Rodzaj wydarzenia:<br />
-        Impreza <input type="radio" /><br />
-        Wojsko <input type="radio" /><br />
-        Targi pracy <input type="radio" /><br />
-        Naukowe <input type="radio" /><br />
+        Impreza <input type="checkbox" /><br />
+        Wojsko <input type="checkbox" /><br />
+        Targi pracy <input type="checkbox" /><br />
+        Naukowe <input type="checkbox" /><br /><br />
         <input type="submit" value="Dodaj wydarzenie"/><br />
     </div>
