--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -8,9 +8,6 @@
         Miejsce wydarzenia: <input type="text" /><br />
         Czas: <input type="text" /><br />
         Rodzaj wydarzenia:<br />
-        Impreza <input type="checkbox" /><br />
-        Wojsko <input type="checkbox" /><br />
-        Targi pracy <input type="checkbox" /><br />
-        Naukowe <input type="checkbox" /><br /><br />
+        Impreza <input type="checkbox" /> Wojsko <input type="checkbox" /> Targi pracy <input type="checkbox" /> Naukowe <input type="checkbox" /><br />
         <input type="submit" value="Dodaj wydarzenie"/><br />
     </div>
