--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -6,7 +6,7 @@
     <div>
         Nazwa wydarzenie: <input type="text" /><br />
         Miejsce wydarzenia: <input type="text" /><br />
-        Czas: <input type="text" /><br />
+        Czas: <input type="datetime" /><br />
         Rodzaj wydarzenia:<br />
         Impreza <input type="checkbox" /> Wojsko <input type="checkbox" /> Targi pracy <input type="checkbox" /> Naukowe <input type="checkbox" /><br />
         <input type="submit" value="Dodaj wydarzenie"/><br />
