zmieniłem w opinie i rporty

--- a/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
@@ -5,5 +5,5 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<h2>Tylko dla zalogowanych uzytkownikow</h2>
+<h2>Tylko dla zalogowanych uzytkownikow oprcowł Gabriel Lewczuk</h2>
 
