--- a/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
@@ -7,3 +7,27 @@
 
 <h2>Tylko dla zalogowanych uzytkownikow oprcowł Gabriel Lewczuk</h2>
 
+<h2>Wybierz wydarzenie o którym chcesz napisać opinię</h2>
+<label for=" Moje_wydarzenia">Wydarzenia</label>
+<select id="Moje_wydarzenia">
+    <option value="Wydrzenie u Jacka">Wydrzenie u Jacka</option>
+    <option value="Otrzęsiny WAT">Otrzęsiny WAT</option>
+    <option value="Targi pracy">Targi pracy</option>
+</select>
+<h2>Twoja opinia</h2>
+<textarea rows="8" cols="50">
+Impreza była bardzo fajna. Przyjdę tu drugi raz.
+</textarea>
+
+&nbsp;<input id="Wyslij" type="button" value="Wyślij" />
+
+<h2>jeżeli były organizowane wydarzenia u Nas przez Ciebie to koniecznie sprawdź jakie opinie piszą uczestnicy o nich.</h2>
+<h2>Wybierz wydarzenie o którym chcesz napisać opinię</h2>
+<label for=" Moje_wydarzenia">Wydarzenia</label>
+<select id="Moje_wydarzenia">
+    <option value="Wydrzenie u Jacka">Wydrzenie u Jacka</option>
+    <option value="Otrzęsiny WAT">Otrzęsiny WAT</option>
+    <option value="Targi pracy">Targi pracy</option>
+</select>
+
+&nbsp;<input id="Raport" type="button" value="Raport" /> 
