--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -11,5 +11,5 @@
     Czas: <input type="datetime" /><br />
     Rodzaj wydarzenia:<br />
     Impreza <input type="checkbox" /> Wojsko <input type="checkbox" /> Targi pracy <input type="checkbox" /> Naukowe <input type="checkbox" /><br />
-    <input type="submit" value="Dodaj wydarzenie" /><br />
+    <input type="submit" value="Dodaj wydarzeniesdf" /><br />
 </div>
