bootstrap 3.4.1 slate https://bootswatch.com/3/slate/

--- a/G.A.Z.SIOS/Views/Home/Index.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Index.cshtml
@@ -7,11 +7,6 @@
     <title> G.A.Z.</title>
     <meta charset="utf-8" />
     <style type="text/css">
-        .auto-style1 {
-            height: 538px;
-            background-color: #FFFFFF;
-            width: 751px;
-        }
 
         .auto-style2 {
             height: 119px;
@@ -138,8 +133,8 @@
         }
     </style>
 </head>
-<body class="auto-style1" style="width: 756px; height: 715px">
-    <div class="auto-style6">
+<body>
+    <div class="auto-style6" style="width: 756px; height: 715px">
 
         <div class="auto-style2">
             <div class="auto-style5">
