--- a/G.A.Z.SIOS/Views/Shared/_Layout.cshtml
+++ b/G.A.Z.SIOS/Views/Shared/_Layout.cshtml
@@ -10,19 +10,21 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/Home/Index" > <img src="~/Images/logo.png" alt="Logo SIOS" width="50" height="50" /> </a>
+                <a href="/Home/Index"> <img src="~/Images/logo.png" alt="Logo SIOS" width="50" height="50" /> </a>
+                @Html.ActionLink("SIOS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("SIOS", "Index", "Home")</li>
                     <li>@Html.ActionLink("O nas", "About", "Home")</li>
                     <li>@Html.ActionLink("Imprezy studenckie", "Imprezy_studenckie", "Home")</li>
                     <li>@Html.ActionLink("Dodaj wydarzenie", "Dodaj_wydarzenie", "Home")</li>
@@ -32,13 +34,12 @@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
-    </div>
+    </nav>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year — moja aplikacja platformy ASP.NET</p>
-        </footer>
+        <footer></footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
