--- a/G.A.Z.SIOS/Views/Home/Imprezy_studenckie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Imprezy_studenckie.cshtml
@@ -5,5 +5,5 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<h2>Albo cała zakładka tylko dla zalogowanych uzytkownikow, albo tylko jej funkcje jak np. weź udział</h2>
+<h2>Albo cała zakładka tylko dla zalogowanych uzytkownikowha, albo tylko jej funkcje jak np. weź udział</h2>
 
