--- a/G.A.Z.SIOS/Views/Home/About.cshtml
+++ b/G.A.Z.SIOS/Views/Home/About.cshtml
@@ -91,7 +91,7 @@
         <br /><br />
         <div class="opisglowny">
             <div class="zdjecie">
-                <a href="#"><img src="~/Images/gerard.jpg" class="rounded" style="height:150px; width:auto"></a>
+                <a href="#"><img src="~/Images/gerard.jpg" class="img-rounded" style="height:150px; width:auto"></a>
             </div>
             <div class="opisczlonka">
                 <p>Gerard jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. Interesuje się bezpieczeństwem w sieci oraz sztukami walki.</p>
@@ -102,7 +102,7 @@
 
         <div class="opisglowny">
             <div class="zdjecie">
-                <a href="#"><img src="~/Images/seba.jpg" class="rounded" style="height:150px; width:auto"></a>
+                <a href="#"><img src="~/Images/seba.jpg" class="img-rounded" style="height:150px; width:auto"></a>
             </div>
             <div class="opisczlonka">
                 <p>Sebastian jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. Pasjonuje go polityka oraz ataki sieciowe.</p>
@@ -113,7 +113,7 @@
 
         <div class="opisglowny">
             <div class="zdjecie">
-                <a href="#"><img src="~/Images/jedrzej.jpg" class="rounded" style="height:150px; width:auto"></a>
+                <a href="#"><img src="~/Images/jedrzej.jpg" class="img-rounded" style="height:150px; width:auto"></a>
             </div>
             <div class="opisczlonka">
                 <p>Jędrzej jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. Bazy danych to jego chleb powszedni.</p>
@@ -124,11 +124,10 @@
 
         <div class="opisglowny">
             <div class="zdjecie">
-                <a href="#"><img src="~/Images/paulina.jpg" class="rounded" style="height:150px; width:auto"></a>
+                <a href="#"><img src="~/Images/paulina.jpg" class="img-rounded" style="height:150px; width:auto"></a>
             </div>
             <div class="opisczlonka">
-                <p>Paulina jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. </p>
-                <p>Paulina zajmuje się zaporami sieciowymi, w tej materii nie ma sobie równych.</p>
+                <p>Paulina jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. Paulina zajmuje się zaporami sieciowymi, w tej materii nie ma sobie równych.</p>
                 <p>Gdy znajduje chwilę wolnego uwielbia pójść na imprezę czy do teatru. To ona jest matką naszego pomysłu "G.A.Z. SIOS".</p>
             </div>
             <div style="clear:both;"></div>
@@ -136,11 +135,10 @@
 
         <div class="opisglowny">
             <div class="zdjecie">
-                <a href="#"><img src="~/Images/gabrys.jpg" class="rounded" style="height:150px; width:auto"></a>
+                <a href="#"><img src="~/Images/gabrys.jpg" class="img-rounded" style="height:150px; width:auto"></a>
             </div>
             <div class="opisczlonka">
-                <p>Gabriel jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. </p>
-                <p>Na codzień zajmuje się kontrolowaniem obiektów wojskowych.</p>
+                <p>Gabriel jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. Na codzień zajmuje się kontrolowaniem obiektów wojskowych.</p>
                 <p>W dni wolne bierze plecak z wodą i podróżuje po całej Polsce. O wakacje warto pytać właśnie jego!</p>
             </div>
             <div style="clear:both;"></div>
