--- a/G.A.Z.SIOS/Views/Event/EventList.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventList.cshtml
@@ -5,5 +5,6 @@
 }
 
 <h2>EventList</h2>
+<h2>@Model.Wydarzenie.ElementAt(0).Nazwa</h2>
 <h2>@Model.Wydarzenie.ElementAt(1).Nazwa</h2>
-
+<h2>@Model.Wydarzenie.ElementAt(2).Nazwa</h2>
