--- a/G.A.Z.SIOS/Views/Event/EventList.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventList.cshtml
@@ -16,6 +16,12 @@
                 <div class="col-md-10">
                     @Html.DisplayFor(modelItem => item.Nazwa)
                 </div>
+                <div class="col-md-10">
+                    @Html.DisplayFor(modelItem => item.Miejsce)
+                </div>
+                <div class="col-md-10">
+                    @Html.DisplayFor(modelItem => item.Cena_wejsciowki) zł
+                </div>
             </div>
         }
         </div>
