--- a/G.A.Z.SIOS/Views/Event/EventList.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventList.cshtml
@@ -6,21 +6,15 @@
 
 <h2>Wszystkie wydarzenia</h2>
 
-<dev class="row">
-    <div class="col-md-8">
-        @foreach (var item in Model.Wydarzenie)
-        {
-            <hr />
-            <div class="form-group">
-                @Html.DisplayFor(modelItem => item.Data.Day).@Html.DisplayFor(modelItem => item.Data.Month).@Html.DisplayFor(modelItem => item.Data.Year)   @Html.DisplayFor(modelItem => item.Data.Hour):@Html.DisplayFor(modelItem => item.Data.Minute)
-                <h3>@Html.DisplayFor(modelItem => item.Nazwa)</h3>
-                <div class="col-md-10">
-                    @Html.DisplayFor(modelItem => item.Miejsce)
-                    @Html.DisplayFor(modelItem => item.Cena_wejsciowki) zł
-                </div>
-                <br />
-            </div>
-        }
+@foreach (var item in Model.Wydarzenie)
+{
+    <dev class="row">
+        <div class="col-md-3">
+            @Html.DisplayFor(modelItem => item.Data.Day).@Html.DisplayFor(modelItem => item.Data.Month)<br />
+            @Html.DisplayFor(modelItem => item.Data.DayOfWeek)
         </div>
-</dev>
-
+        <div class="col-md-7">
+            <h3>@Html.DisplayFor(modelItem => item.Nazwa)</h3>
+        </div>        
+    </dev>
+}
