--- a/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Dodaj_wydarzenie.cshtml
@@ -77,6 +77,13 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    @Html.LabelFor(m => m.EventViewModels.Opis, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextAreaFor(m => m.EventViewModels.Opis, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.EventViewModels.Opis, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Dodaj wydarzenie" class="btn btn-default" />
                     </div>
