--- a/G.A.Z.SIOS/Views/Home/Contact.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Contact.cshtml
@@ -1,17 +1,85 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/fontello.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
+    <style type="text/css">
+        .container {
+            width: 100%;
+        }
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+        .containerek {
+            width: 100%;
+            font-family: 'Lato', sans-serif;
+            font-size: 20px;
+        }
+
+        .naglowek {
+            width: 100%;
+            text-align: left;
+            min-height: 40px;
+            margin-left: 0;
+            margin-right: 0;
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        .opisglowny {
+            width: auto;
+            text-align: left;
+        }
+
+        .zdjecie {
+            float: left;
+
+        }
+
+        .opisczlonka {
+            float: left;
+            text-align: left;
+            margin-left: 50px;
+            margin-top: 20px;
+            color: #FEFEFE;
+            font-size: medium;
+        }
+
+        .odwiedziny {
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <div class="containerek" style="width:100%; height:100%">
+
+        <div class="naglowek">
+            <p style=""><strong>KONTAKT:</strong></p>
+        </div>
+        <div class="opisglowny">
+            <div class="opisglowny" style="float: left;">
+                <p>G.A.Z. SIOS</p>
+                <p>ul.Gen.Sylwestra Kaliskiego 19</p>
+                <p>01-476 Warszawa</p>
+                <p></p>
+                <p></p>
+                <p>Godziny przyjęć interesantów:</p>
+                <p>Poniedziałek-Piątek: 9:00 - 15:00</p>
+                <p></p>
+                <p></p>
+                <p>adres email: gerard.miloszewski@wp.pl</p>
+                <p>tel:987-654-321</p>
+                <p></p>
+                <p></p>
+            </div>
+            <div class="zdjecie">
+                <img src="~/Images/siedziba.jpg" class="img-rounded" style=" margin-left:250px; height:250px; width:400px">
+            </div>
+            <div style="clear:both;"></div>
+        </div>
+    </div>  
+</body>
+</html>
