--- a/G.A.Z.SIOS/Views/Event/EventList.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventList.cshtml
@@ -15,6 +15,9 @@
         </div>
         <div class="col-md-10">
             <h3>@Html.DisplayFor(modelItem => item.Nazwa)</h3>
-        </div>        
-    </dev>
+        </div>
+        <div class="col-md-2">
+                
+        </div>
+</dev>
 }
