--- a/G.A.Z.SIOS/Views/Event/EventList.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventList.cshtml
@@ -8,16 +8,17 @@
 
 @foreach (var item in Model.Wydarzenie)
 {
-    <dev class="row">
+<dev class="row">
+    <div style="border: 1px solid white;">
         <div class="col-md-2">
-            @Html.DisplayFor(modelItem => item.Data.Day).@Html.DisplayFor(modelItem => item.Data.Month)<br />
-            @Html.DisplayFor(modelItem => item.Data.DayOfWeek)
+            @Html.DisplayFor(modelItem => item.Data.Day).@Html.DisplayFor(modelItem => item.Data.Month).@Html.DisplayFor(modelItem => item.Data.Year)
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayFor(modelItem => item.Data.Hour):@Html.DisplayFor(modelItem => item.Data.Minute)
         </div>
         <div class="col-md-10">
             <h3>@Html.DisplayFor(modelItem => item.Nazwa)</h3>
         </div>
-        <div class="col-md-2">
-                
-        </div>
+    </div>
 </dev>
 }
