--- a/G.A.Z.SIOS/Views/Event/EventList.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventList.cshtml
@@ -11,13 +11,13 @@
 <dev class="row">
     <div style="border: 1px solid white;">
         <div class="col-md-2">
-            @Html.DisplayFor(modelItem => item.Data.Day).@Html.DisplayFor(modelItem => item.Data.Month).@Html.DisplayFor(modelItem => item.Data.Year)
+            <h5>@Html.DisplayFor(modelItem => item.Data.Day).@Html.DisplayFor(modelItem => item.Data.Month).@Html.DisplayFor(modelItem => item.Data.Year)</h5>
         </div>
         <div class="col-md-2">
-            @Html.DisplayFor(modelItem => item.Data.Hour):@Html.DisplayFor(modelItem => item.Data.Minute)
+            <h5>@Html.DisplayFor(modelItem => item.Data.Hour):@Html.DisplayFor(modelItem => item.Data.Minute)</h5>
         </div>
         <div class="col-md-7">
-            <h3>@Html.DisplayFor(modelItem => item.Nazwa)</h3>
+            <h4>@Html.DisplayFor(modelItem => item.Nazwa)</h4>
         </div>
     </div>
 </dev>
