--- a/G.A.Z.SIOS/Views/Event/EventDetails.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventDetails.cshtml
@@ -5,3 +5,11 @@
 }
 
 <h2>@Html.DisplayFor(m => m.Nazwa)</h2>
+<dev class="row">
+    <div class="col-md-2">
+        <h5></h5>
+    </div>
+    <div class="col-md-7">
+        
+    </div>
+</dev>
