--- a/G.A.Z.SIOS/Views/Event/EventDetails.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventDetails.cshtml
@@ -17,7 +17,7 @@
         <h4>Miejsce: @Html.DisplayFor(m => m.Miejsce)</h4>
         <h4>Data:    @Html.DisplayFor(m => m.Data.Day).@miesiac.@Html.DisplayFor(m => m.Data.Year)</h4>
         <h4>Godzina: @Html.DisplayFor(m => m.Data.Hour):@minuta</h4>
-        <h4>Cena:    @Html.DisplayFor(m => m.Cena_wejsciowki);zł</h4>
+        <h4>Cena:    @Html.DisplayFor(m => m.Cena_wejsciowki)zł</h4>
         <p>@Html.DisplayFor(m => m.Opis)</p>
     </div>
     <div class="col-md-5">
