Strona główna - sprint 4

--- a/G.A.Z.SIOS/Views/Home/About.cshtml
+++ b/G.A.Z.SIOS/Views/Home/About.cshtml
@@ -54,8 +54,8 @@
         }
 
         .fb {
-            width: 70px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
             float: left;
         }
 
@@ -64,8 +64,8 @@
             }
 
         .ig {
-            width: 70px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
             float: left;
         }
 
@@ -124,17 +124,6 @@
 
         <div class="opisglowny">
             <div class="zdjecie">
-                <a href="#"><img src="~/Images/paulina.jpg" class="img-rounded" style="height:150px; width:auto"></a>
-            </div>
-            <div class="opisczlonka">
-                <p>Paulina jest studentem 4 roku Kryptologii i Cyberbezpieczeństwa. Paulina zajmuje się zaporami sieciowymi, w tej materii nie ma sobie równych.</p>
-                <p>Gdy znajduje chwilę wolnego uwielbia pójść na imprezę czy do teatru. To ona jest matką naszego pomysłu "G.A.Z. SIOS".</p>
-            </div>
-            <div style="clear:both;"></div>
-        </div>
-
-        <div class="opisglowny">
-            <div class="zdjecie">
                 <a href="#"><img src="~/Images/gabrys.jpg" class="img-rounded" style="height:150px; width:auto"></a>
             </div>
             <div class="opisczlonka">
@@ -145,22 +134,29 @@
         </div>
 
         <div class="opisglowny">
-            <p style="text-align: left; margin-left: 20px;">Możesz nas znaleźć również na:</p>
-            <div class="opisglowny">
-                <a href="https://www.facebook.com/GAZ-SIOS-115855283186705/">
-                    <div class="fb">
+            <div class="zdjecie">
+                <a href="#"><img src="~/Images/paulina.jpg" class="img-rounded" style="height:150px; width:auto"></a>
+            </div>
+            <div class="opisczlonka">
+                <p>Paulina była studentka 4 roku Kryptologii i Cyberbezpieczeństwa. Paulina zajmuje się zaporami sieciowymi, w tej materii nie ma sobie równych.</p>
+                <p>Gdy znajduje chwilę wolnego uwielbia pójść na imprezę lub do teatru. </p>
+            </div>
+            <div style="clear:both;"></div>
+        </div>
 
-                    </div>
+
+        <div class="opisglowny">
+            <p style="text-align: left; margin-left: 20px;">Możesz nas znaleźć również na:</p>
+            <div class="opisglowny" style="text-align: left;">
+                <a href="https://www.facebook.com/GAZ-SIOS-115855283186705/">
+                    <img src="~/Images/fb.jpg" style="height:70px; width:70px">
                 </a>
                 <a href="https://www.instagram.com/g.a.z.sios/">
-                    <div class="ig">
-
-                    </div>
+                    <img src="~/Images/ig.jpg" style="height:70px; width:70px">
                 </a>
-                <div style="clear:both"></div>
             </div>
         </div>
     </div>
- 
+
 </body>
 </html>
