--- a/G.A.Z.SIOS/Views/Home/Index.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Index.cshtml
@@ -7,176 +7,70 @@
     <title> G.A.Z.</title>
     <meta charset="utf-8" />
     <style type="text/css">
-
-        .auto-style2 {
-            height: 119px;
-            font-size: xx-large;
-        }
-
-        .auto-style4 {
-            text-align: center;
-            color: #FFFFFF;
-        }
-
-        #Button1 {
-            height: 20px;
-            width: 86px;
-            font-size: xx-small;
-            margin-top: 6px;
-            color: #FFFFFF;
-            background-color: #666666;
-        }
-
-        #Button2 {
-            font-size: xx-small;
-            color: #FFFFFF;
-            background-color: #666666;
-        }
-
-        #Button3 {
-            font-size: xx-small;
-            color: #FFFFFF;
-            background-color: #666666;
-        }
-
-        #Button4 {
-            font-size: xx-small;
-            color: #FFFFFF;
-            background-color: #666666;
-        }
-
-        #Button5 {
-            font-size: xx-small;
-            color: #FFFFFF;
-            background-color: #666666;
-        }
-
-        #Button6 {
-            font-size: xx-small;
-            color: #FFFFFF;
-            background-color: #666666;
-        }
-
-        #Button7 {
-            font-size: xx-small;
-            color: #FFFFFF;
-            background-color: #666666;
-            margin-bottom: 0px;
-        }
-
-        .auto-style5 {
-            height: 120px;
-        }
-
-        .auto-style6 {
-            background-color: #666666;
-        }
-
-        .auto-style7 {
-            height: 532px;
-            text-align: center;
-            width: 752px;
-        }
-
-        #Button8 {
-            font-size: large;
-            color: #3366FF;
-            background-color: #FFFFFF;
-        }
-
-        #Button9 {
-            margin-top: 13px;
-            font-size: large;
-            color: #3366FF;
-            background-color: #FFFFFF;
-        }
-
-        .auto-style11 {
-            width: 259px;
-            height: 182px;
-            margin-top: 0px;
-        }
-
-        .auto-style14 {
-            width: 258px;
-            height: 187px;
-        }
-
-        .auto-style25 {
+        .container {
             width: 100%;
-            height: 430px;
+            height: 100%;
         }
 
-        .auto-style26 {
-            height: 202px;
-            width: 446px;
-        }
-
-        .auto-style27 {
-            width: 323px;
-            height: 209px;
-        }
-
-        .auto-style28 {
-            width: 310px;
-            height: 202px;
-        }
-
-        .auto-style30 {
-            text-align: left;
-            font-size: x-small;
-        }
-
-        .auto-style31 {
-            width: 299px;
-            height: 212px;
+        .zdjecia {
+            width: auto;
+            height: auto;
+            min-height: 200px;
+            min-width: 400px;
         }
     </style>
 </head>
 <body>
-    <div class="auto-style6" style="width: 756px; height: 715px">
+    <div class="container">
 
-        <div class="auto-style2">
-            <div class="auto-style5">
-                <p class="auto-style4">
-                    <input id="Button1" type="button" value="Strona główna" />
-                    <input id="Button2" type="button" value="Impreza" />
-                    <input id="Button3" type="button" value="Wojsko" />
-                    <input id="Button4" type="button" value="Wydarzenia naukowe" />
-                    <input id="Button5" type="button" value="Targi Pracy" />
-                    <input id="Button6" type="button" value="Dodaj wydarzenie" />
-                    <input id="Button7" type="button" value="Opinia o wydarzeniu" />
-                </p>
-                <p class="auto-style4">
-                    <strong>G.A.Z. - Imprezy i wydarzenia studenckie</strong>
-                </p>
-            </div>
-            <div class="auto-style7">
-                &nbsp;<input id="Button8" type="button" value="Zaloguj się!" /><input id="Button9" type="button" value="Zarejestruj się!" />
-                <table class="auto-style25">
-                    <tr>
-                        <td class="auto-style28">
-                            <img alt="" class="auto-style11" src="~/Images/wojsko.jpg" />
-                        </td>
-                        <td class="auto-style26">
-                            <img alt="" class="auto-style27" src="~/Images/impreza.jpg" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="auto-style28">
-                            <img alt="" class="auto-style14" src="~/Images/naukowe.jpg" />
-                        </td>
-                        <td class="auto-style26">
-                            <img alt="" class="auto-style31" src="~/Images/targipracy.jpg" />
-                        </td>
-                    </tr>
-                </table>
-                <div class="auto-style30">
-                    Zalogowany jako:
-                </div>
-            </div>
+        <div style="text-align:center; ">
+            <p style="color: darkorange;">Dołącz do platformy SIOS!</p>
+            <p style="color: darkorange;">Zajmujemy się wszelkimi wydarzeniami naukowymi, studenckimi czy imprezami.</p>
+            <p style="color: darkorange;">To z Nami będziesz mógł tworzyć oraz być informowanym o najważniejszych eventach.</p>
+            <p style="color: darkorange;">Działamy już 3 miesiące i zobacz przy jakich wydarzeniach mieliśmy udział.</p>
+            <p style="color: red;">Nie czekaj ani chwili, zajerejestruj się już dziś!</p>
+        </div>
+
+
+        <div class="zdjecia" style="text-align:center;">
+            <img id="image" src="~/Images/1.jpg" style="width: auto; height: auto" />
+            <br />
+            <input type="button" value="Start" onclick="startImageSlideShow()" />
+            <input type="button" value="Stop" onclick="stopImageSlideShow()" />
+            <script type="text/javascript">
+                var intervalId;
+
+                function startImageSlideShow() {
+                    intervalId = setInterval(setImage, 1500);
+                }
+
+                function stopImageSlideShow() {
+                    clearInterval(intervalId);
+                }
+
+                function setImage() {
+                    var imageSrc = document.getElementById("image").getAttribute("src");
+                    var currentImageNumber = imageSrc.substring(imageSrc.lastIndexOf("/") + 1,
+                        imageSrc.lastIndexOf("/") + 2);
+                    if (currentImageNumber == 8) {
+                        currentImageNumber = 0;
+                    }
+                    document.getElementById("image").setAttribute("src", "/Images/" +
+                        (Number(currentImageNumber) + 1) + ".jpg");
+                }
+            </script>
+        </div>
+        <br /><br /><br />
+        <div style="text-align:center;">
+            <a href="https://www.facebook.com/GAZ-SIOS-115855283186705/">
+                <img src="~/Images/fb.jpg" style="height:70px; width:70px">
+            </a>
+            <a href="https://www.instagram.com/g.a.z.sios/">
+                <img src="~/Images/ig.jpg" style="height:70px; width:70px">
+            </a>
         </div>
     </div>
+
 
 </body>
 </html>
